# display_1.8

Pico_code/c/: CMakeLists.txt  ReadmeEN.txt  cgi.h  get_images.c  helper_functions.c  htmldata.c  icons.c  idfknow.c  just.c  main.c  nxjson.c  pico_clock.c  pico_httpd.c  prev_wifi_setup.c  someJunk.c  wifi_setup.c  wifi_setup.h
Pico_code/c/.cache/clangd/index/: DEV_Config.c.317BAF0FB8CF31E8.idx  DEV_Config.c.C395136756B74B18.idx  DEV_Config.h.7A2DC5F523C2A0B4.idx  DEV_Config.h.E55E26B30801FDB9.idx  Debug.h.3D9792D9F1D4B217.idx  Debug.h.AEFC87FABBA98D46.idx  GUI_Paint.c.3F96C0B005FAA170.idx  GUI_Paint.c.572684B709A3A718.idx  GUI_Paint.h.AFEE4BC9746F0322.idx  GUI_Paint.h.BA66339B35A430D2.idx  ImageData.c.14C3D49BFFCAE5AC.idx  ImageData.h.F6F9AA963F2C6F17.idx  Infrared.c.DE654E91BC566492.idx  Infrared.h.2EC99020C6D051D8.idx  LCD_0in96.c.6F43035BC821A4CD.idx  LCD_0in96.h.7FE75896CAF07414.idx  LCD_0in96_test.c.FD0C99949158304E.idx  LCD_1in14.c.ECA335FBF77591A3.idx  LCD_1in14.h.59D95FA60D79D1FD.idx  LCD_1in14_V2.c.4C79EB990EBF3743.idx  LCD_1in14_V2.h.84918B44CCC1912C.idx  LCD_1in14_V2_test.c.24EEA6038736B297.idx  LCD_1in14_test.c.92B779527FB16B7A.idx  LCD_1in3.c.85EECCF9B307BB47.idx  (+103 more)
Pico_code/c/icons/: 01d.c  01n.c  02d.c  02n.c  03d.c  03n.c  04d.c  04n.c  09d.c  09n.c  10d.c  10n.c  11d.c  11n.c  13d.c  13n.c  50d.c  50n.c
Pico_code/c/lib/Config/: CMakeLists.txt  DEV_Config.c  DEV_Config.h
Pico_code/c/lib/Fonts/: CMakeLists.txt  fonts.h
Pico_code/c/lib/GUI/: GUI_Paint.c  GUI_Paint.h
Pico_code/c/lib/LCD/: LCD_1in8.h
Pico_code/c/working_version/: main.uf2
(+2 files in other folders)
